start of implementation
