# src/routes/user.js
@@ -1,5 +1,11 @@
 import { Router } from 'express'
-import { create, getById, getAll, updateById } from '../controllers/user.js'
+import {
+  create,
+  getById,
+  getAll,
+  updateById,
+  updateLoggedInUser
+} from '../controllers/user.js'
 import {
   validateAuthentication,
   validateTeacherRole
@@ -11,5 +17,6 @@ router.post('/', create)
 router.get('/', validateAuthentication, getAll)
 router.get('/:id', validateAuthentication, getById)
 router.patch('/:id', validateAuthentication, validateTeacherRole, updateById)
+router.put('/loggedInUser', validateAuthentication, updateLoggedInUser)
 
 export default router
